--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1569,3 +1569,14 @@ padding-top: 2rem;
   width: 0px;
 }
 
+.supportbg{
+  background-image: url(../images/customersupport.jpg);
+  background-size: cover;
+  background-position-y: -80px;
+  background-repeat: no-repeat;
+  opacity: 87%;
+  width: 100%;
+  height: 40%;
+  box-shadow: 0px 1px 10px rgb(86, 85, 85);
+}
+
