--- a/styles/DashboardAgent.module.css
+++ b/styles/DashboardAgent.module.css
@@ -32,11 +32,13 @@ margin-top: 10px;
 }
 .agent_product {
   border: 2px solid rgba(0, 0, 0, 0.453);
+  width: min-content;
 }
 
 .agent_product_image {
-  width: 350px !important;
-  height: 200px !important;
+  min-width: 150px !important;
+  min-height: 100px !important;
+  max-height: 200px !important;
 }
 .agent_product_detail {
   display: flex;
