--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1580,3 +1580,17 @@ padding-top: 2rem;
   box-shadow: 0px 1px 10px rgb(86, 85, 85);
 }
 
+.decoration_none{
+  text-decoration: none;
+}
+
+.scrollhide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollhide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
