--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,11 +8,6 @@ body {
   color: white;
   overflow-x: hidden;
 }
-/* 
-  ////////////////////////////////////////////////////////
-   NAVBAR
-  ///////////////////////////////////////////////////////
-*/
 
 .navbar {
   padding-left: 3rem !important;
@@ -26,7 +21,6 @@ body {
 .btn-div {
   display: flex;
   flex-direction: column;
-  /* margin: 2rem; */
 }
 
 .thumbs {
@@ -49,14 +43,12 @@ body {
 .btn-div button:hover {
   background: none;
   color: black;
-  /* margin-left: 0rem; */
   border: none;
 }
 
 .btn-div-2 {
   display: flex;
   flex-direction: column;
-  /* margin: 2rem; */
 }
 
 .btn-div-2 button {
@@ -68,13 +60,11 @@ body {
   margin-left: 0;
   transition-duration: 300ms;
   padding: 1rem;
-  /* transform: translateY(-8px); */
 }
 
 .btn-div-2 button:hover {
   background: none;
   color: black;
-  /* margin-left: 0rem; */
   border: none;
 }
 
@@ -113,10 +103,7 @@ body {
 }
 
 .offcanvas-backdrop.show {
-  /* filter: blur(3px); */
   opacity: 0.6 !important;
-  /* filter: blur(3px) !important; */
-  /* -webkit-backdrop-filter: blur(10px); */
 }
 
 .all-nav-btns {
@@ -160,7 +147,6 @@ body {
 }
 
 .sign-in-btn span:nth-child(1) {
-  /* padding: 0 !important; */
   transform: translateY(4px);
   padding-right: 5px !important;
 }
@@ -168,7 +154,6 @@ body {
 .left-nav h1 {
   display: inline-block;
   transform: translateY(5px);
-  /* margin-top: 10px; */
   letter-spacing: 1px;
   color: white;
 }
@@ -197,13 +182,11 @@ body {
   transition: 400ms;
 }
 
-/* //////////// Slider _Image ////////// */
 
 .img-slider {
   height: 80vh;
   z-index: 3;
   object-fit: cover;
-  /* position: absolute; */
 }
 
 .carousel-status {
@@ -217,11 +200,9 @@ body {
 }
 
 .overlay {
-  /* height: 80vh; */
   height: 100%;
   width: 100%;
   position: absolute;
-  /* z-index: 5; */
   background: linear-gradient(
       180deg,
       rgba(0, 0, 0, 0.735),
@@ -231,33 +212,22 @@ body {
 }
 
 .overlay-main-title {
-  /* height: 80vh; */
-  /* width: 100%; */
+
   z-index: 4;
-  /* margin: auto; */
-  /* background-color: #00000090 !important; */
-  /* background: linear-gradient(0deg, rgba(0, 0, 0, 0.181), rgba(0, 0, 0, 0.58) 80%) fixed no-repeat; */
   position: absolute;
   color: #fff;
-  /* top: 100%; */
   width: 70%;
   height: 40%;
   display: flex;
   justify-content: center;
-  /* transform: translateY(30%); */
   align-items: center;
   flex-direction: column;
-  /* top: 40%;
-  right: 5%; */
   left: 15%;
   top: 23%;
-
-  /* font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
 }
 
 .overlay-main-title > h1 {
   font-size: 8rem;
-  /* filter: blur(5px); */
   color: rgba(255, 255, 255, 0.82);
 }
 
@@ -266,11 +236,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* z-index: 10; */
 }
 
 .carousel-search input {
-  /* background: #e2e2e252; */
   background: #e2e2e229;
 
   backdrop-filter: blur(5px);
@@ -294,13 +262,8 @@ body {
 }
 
 .carousel-search button {
-  /* background: #e2e2e252; */
   background: #e2e2e229;
-
-  /* position: absolute; */
-  /* right: 29.4%; */
   border-radius: 50%;
-  /* font-size: 2rem; */
   margin-left: 5px;
   transition-duration: 300ms;
 }
@@ -332,7 +295,6 @@ body {
   align-items: center;
   width: 100px;
   height: 100px;
-  /* background-color: #ffffff62; */
   background: #e2e2e234;
   border-radius: 50%;
 
@@ -352,7 +314,6 @@ body {
 .carousel-icons span {
   font-size: 2rem;
 
-  /* border-radius: 50%; */
 }
 
 nav {
@@ -371,26 +332,12 @@ nav {
 }
 
 .carousel .control-dots .dot {
-  /* margin: 0 !important; */
   border-radius: 0 !important;
   width: 60px !important;
   height: 4px !important;
   z-index: 5 !important;
 }
 
-/* 
-.carousel .control-arrow, .carousel.carousel-slider .control-arrow{
-font-size: 20px !important;
-display: block !important ;
-opacity: 1 !important;
-height: 30px !important;
-background-color: #000 !important;
-margin: 0 !important;
-padding: 0 !important;
-top: 0px !important;
-top:100px !important;
-} */
-/*   //////////////////////// Footer   //////////////////////// */
 
 .text-white {
   text-decoration: none;
@@ -401,11 +348,9 @@ top:100px !important;
   text-align: left;
 }
 .footer-color {
-  /* background  : radial-gradient(circle,rgb(95, 36, 97) 0%,  rgba(2,0,36,1) 100%) !important;  */
   background: black !important;
 }
 
-/*   //////////////////////// Card   //////////////////////// */
 .menu-titles {
   padding: 3rem;
 }
@@ -464,7 +409,6 @@ top:100px !important;
   color: #ffffff;
   position: relative;
   top: 70%;
-  /* left: 0%; */
   padding: 10%;
 }
 
@@ -472,7 +416,6 @@ top:100px !important;
   color: #ffffff;
   position: relative;
   top: 60%;
-  /* left: 0%; */
   padding: 11%;
 }
 
@@ -481,7 +424,6 @@ top:100px !important;
   position: relative;
   top: 45%;
   left: 60%;
-  /* left: 0%; */
   padding: 11%;
   font-size: 1.5rem;
 }
@@ -503,10 +445,8 @@ top:100px !important;
   text-align: center;
 }
 .product-category-wrapper h1 {
-  /* display: flex; */
   color: #fff;
   color: #000000;
-  /* padding-top: 1rem; */
   font-size: 1rem;
   text-align: center;
   letter-spacing: 4px;
@@ -534,23 +474,16 @@ top:100px !important;
   height: 140px;
   width: 140px;
   position: absolute;
-  /* background: linear-gradient(180deg,
-      rgba(0, 0, 0, 0.056),
-      rgba(0, 0, 0, 0.31) 30%) fixed no-repeat; */
   background: none;
-  /* background-color: #ffffff48; */
   border-radius: 50%;
 }
 
 .product-category-image {
-  /* filter: blur(1px); */
   width: 100px;
 }
 
 .product-card-div-row {
-  /* margin-top: 4rem; */
   margin-bottom: 4rem;
-  /* width: 100%; */
   display: flex;
   justify-content: left;
   align-items: center;
@@ -558,21 +491,14 @@ top:100px !important;
   gap: 17px;
 }
 .product-card-div-col {
-  /* margin-top: 4rem; */
-  /* width: 100%; */
   margin: 20px;
   flex-direction: column;
   flex-wrap: wrap;
 }
 
 .product-cards {
-  /* height: 280px;
-  width: 480px; */
-  /* background-size: 450px !important; */
-  /* background-color: #000000; */
   transition-duration: 500ms;
-  /* overflow: hidden; */
-  /* border-radius: 12px; */
+
 }
 .product--image-background {
   position: absolute;
@@ -586,8 +512,6 @@ top:100px !important;
 .product-name {
   margin: 0;
   margin-top: 7px !important;
-  /* font-size: 1rem; */
-  /* font-weight:bold; */
 }
 
 .product-price {
@@ -595,7 +519,6 @@ top:100px !important;
   font-size: 0.85rem;
   padding-left: 2px;
   letter-spacing: 1px;
-  /* font-weight:bold; */
 }
 .product-details-div-row {
   display: flex;
@@ -626,10 +549,7 @@ top:100px !important;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  /* padding: 0px 20px 10px 10px; */
-  /* background: #151515; */
   color: white;
-  /* font-weight: bold; */
   letter-spacing: 1px;
 }
 .product-details {
@@ -652,8 +572,6 @@ top:100px !important;
 .product--image {
   height: 280px;
   width: 480px;
-  /* border-radius: 40px; */
-  /* filter: blur(10px); */
 }
 
 .product-company-icon {
@@ -682,7 +600,6 @@ top:100px !important;
   padding-bottom: 2px;
   height: 25px;
 }
-/*   //////////////////////// Nav2  //////////////////////// */
 
 @media only screen and (max-width: 480px) {
   .responsive_nav2 {
@@ -754,10 +671,7 @@ top:100px !important;
   visibility: hidden;
 }
 
-/* .nav-content{
-display: flex;
-flex-direction: column;
-} */
+
 
 .flex-end {
   margin: 10px;
@@ -770,7 +684,6 @@ flex-direction: column;
 }
 
 .nav1 {
-  /* position: fixed; */
   z-index: 200;
   width: 100vw;
 }
@@ -790,13 +703,6 @@ nav {
   height: 110%;
 }
 
-/*   //////////////////////// Product Gallery  //////////////////////// */
-/* 
-
-
-
-
-/* //////////////////    ProductPage   //////////////////////////// */
 
 .product_page {
   background: rgb(130, 13, 159);
@@ -818,7 +724,6 @@ nav {
 .nav22 ul {
   display: flex;
   background-color: #180628;
-  /* color: black; */
   flex-direction: row;
   border-bottom: 3px solid white;
 }
@@ -846,7 +751,6 @@ nav {
   color: black;
 }
 
-/* ///////////////////////////////////Product_Card ////////////////////////////////////// */
 .card22 {
   height: 88vh;
   margin-left: 5rem;
@@ -901,7 +805,6 @@ nav {
   margin-right: 5rem;
   margin-top: 2rem;
   padding: 2rem;
-  /* border: 1px so; */
   background-color: rgb(214, 192, 233);
   border-radius: 5px;
 }
@@ -920,12 +823,10 @@ nav {
 .desc_details1 {
   width: 30%;
   height: 100%;
-  /* margin: 0 ; */
 }
 
 .dd3 {
   display: flex;
-  /* justify-content: center; */
   align-items: flex-start;
   flex-direction: column;
 }
@@ -982,24 +883,6 @@ nav {
   font-size: 30px !important;
 }
 
-/*
-.product-gallery-container {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-auto-rows: 100px 300px;
-  grid-gap: 10px;
-  grid-auto-flow: dense;
-}
-
-.gallery-item{
-    width:100%;
-    height:100%;
-    position:relative;
-    transition-duration: 500ms;
-.product-gallery-container:hover .gallery-item:not(:hover) {
-  /* opacity: 0.9; */
-/* filter: grayscale(1); */
-/* } */
 
 .gallery-item {
   width: 100%;
@@ -1073,7 +956,7 @@ nav {
 .gallery-image-h-6 {
   grid-row: span 6;
 }
-*/ .fadeout {
+.fadeout {
   opacity: 0.7;
 }
 
@@ -1083,25 +966,18 @@ nav {
 }
 
 .similar_products-main-div {
-  /* height: 80vh; */
   color: #fff;
   margin: 2rem 5rem;
 }
 
 .similar_products {
-  /* display: grid; */
-  /* gap: 10px; */
   display: flex;
   flex-wrap: wrap;
-  /* grid-template-columns: auto ,auto,auto; */
   gap: 25px;
 
-  /* background-color: #180628; */
 }
 
 .similar_products > div {
-  /* margin-left:1.3rem ; */
-  /* margin-top: 1rem; */
   height: 152px;
   border-radius: 0.5rem;
   border: 1px solid white;
@@ -1119,8 +995,6 @@ nav {
 
 .similar_products p {
   position: absolute;
-  /* bottom: -2rem; */
-  /* left: 1rem;  */
   top: 0%;
   font-size: 40px;
 }
@@ -1157,7 +1031,6 @@ nav {
   width: 200px;
   height: 60px;
   border-radius: 0.5rem;
-  /* background-color: rgb(183, 183, 183); */
   border: 1px solid black;
   transition: 300ms;
 }
@@ -1167,7 +1040,6 @@ nav {
   color: #fff;
 }
 
-/*////////////////////////// imageUpload Background ////////////////////////////// */
 .forms-uploadimage {
   display: flex;
   flex-direction: column;
@@ -1225,19 +1097,7 @@ nav {
   color: #fff;
 }
 
-/* ////////////////////////  New SignUp Page ///////////////////////////////// */
 
-/* .mainSignUpcont{
-  /* display: flex;
-  justify-content: left;
-  padding-left: 5%;
-  align-items: center;
-  height: 100vh; */
-  /* background-color: #f3d9d7; */
-/* /* background-color:rgb(93,23,235);
-/* background-size: cover; */
-/* background-position: center;  */
-/* }  */ */
 
 .login_content {
   display: flex;
@@ -1276,7 +1136,6 @@ nav {
   width: 80%;
   padding: 0.7rem 1rem;
   background-color: rgb(255, 255, 255) !important;
-  /* padding: 0.4rem 3rem 0.4rem 1rem; */
   border-radius: 2rem;
   box-shadow: 0 0 0 3px rgb(93, 23, 235);
   font-size: 0.8rem;
@@ -1308,17 +1167,13 @@ nav {
 }
 
 .signUpEnterPass {
-  /* display: block; */
   width: 80%;
   padding: 0.7rem 1rem;
   background-color: rgb(255, 255, 255) !important;
-
-  /* padding: 0.4rem 3rem 0.4rem 1rem; */
   border-radius: 2rem;
   box-shadow: 0 0 0 3px rgb(93, 23, 235);
   font-size: 0.8rem;
   margin-bottom: 1rem;
-  /* font-weight: bold; */
 }
 .signUpEnterPass:active {
   background-color: rgb(255, 255, 255) !important;
@@ -1335,8 +1190,6 @@ nav {
 }
 .signupicon {
   font-size: 3rem;
-  /* color: blue; */
-  /* margin-left: -40px; */
   margin-top: -60px;
 }
 .button_div {
@@ -1379,7 +1232,6 @@ nav {
   font-size: 1.4rem;
   padding: 0.7rem 0.9rem;
   padding-left: 1rem;
-  /* font-weight: 600; */
   color: #fff;
   background-color: rgb(236, 20, 20);
   cursor: pointer;
@@ -1410,7 +1262,6 @@ nav {
 .name_n_loc {
   display: flex;
   width: 100%;
-  /* background: #000; */
 }
 .name_n_loc > div {
   width: 50%;
@@ -1525,9 +1376,7 @@ outline: none;
   position: absolute;
   top: 2.5rem;
   right: 3rem;
-  /* margin-left: -40px; */
-  /* display: inline; */
-  /* transform: translate(-2rem, 0rem); */
+
 }
 .terms_n_conditions{
 display: flex;
@@ -1588,9 +1437,8 @@ padding-top: 2rem;
   display: none;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
 .scrollhide {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
 }
 
