--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1102,10 +1102,12 @@ nav {
 .login_content {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
-  width: 100%;
-  padding: 40px;
-  margin-right: 30px;
+  width: 80%;
+  margin: auto;
+  /* padding: 40px; */
+  /* margin-right: 30px; */
   background-color: #ffffff;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   border-radius: 16px;
@@ -1115,7 +1117,7 @@ nav {
   width: 80%;
   margin: auto;
   background-color: white;
-  padding: 2rem 3rem;
+  padding: 2rem 2rem 2rem 2rem;
   border-radius: 2rem;
 }
 .inner_login h2 {
@@ -1189,8 +1191,11 @@ nav {
   margin-bottom: 30px;
 }
 .signupicon {
-  font-size: 3rem;
+  font-size: 1rem;
   margin-top: -60px;
+  margin-left: -60px;
+    color:  rgb(93, 23, 235);
+ 
 }
 .button_div {
   margin-top: 1rem;
@@ -1252,7 +1257,7 @@ nav {
   font-size: 1.5rem;
   text-align: center;
   margin-top: 2.5rem;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 .explorer_title{
   font-size: 2rem;
@@ -1442,3 +1447,11 @@ padding-top: 2rem;
   scrollbar-width: none; 
 }
 
+
+.logo_name{
+position: absolute;
+top: 1rem;
+left: 2rem;
+font-size: 2rem;
+color: white;
+}
