--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1499,3 +1499,8 @@ border-color: #00000000 !important;
     --bs-btn-disabled-bg: #0d6dfd00 !important;
     --bs-btn-disabled-border-color: #0d6dfd00 !important;
 }
+
+.navbarl{
+  background: rgb(25,0,108);
+background: linear-gradient(56deg, rgba(25,0,108,0) 0%, rgba(34,10,114,1) 0%, rgba(64,43,133,1) 34%, rgba(220,75,255,1) 100%, rgba(71,0,83,0) 100%);
+}
