--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1239,6 +1239,7 @@ nav {
   background-color: rgb(236, 20, 20);
   cursor: pointer;
   transition: background-color 0.3s;
+  z-index: 1000;
 }
 .signupsubmitbtngoogle:hover {
   background-color: rgb(192, 18, 18);
