--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1429,7 +1429,7 @@ padding-top: 2rem;
   background-repeat: no-repeat;
   opacity: 87%;
   width: 100%;
-  height: 40%;
+  height: 45%;
   box-shadow: 0px 1px 10px rgb(86, 85, 85);
 }
 
@@ -1504,4 +1504,16 @@ border-color: #00000000 !important;
 .navbarl{
   background: rgb(25,0,108);
 background: linear-gradient(56deg, rgba(25,0,108,0) 0%, rgba(34,10,114,1) 0%, rgba(64,43,133,1) 34%, rgba(220,75,255,1) 100%, rgba(71,0,83,0) 100%);
+}
+
+@media only screen and (max-width:1300px){
+  .lghidden{
+    display: none;
+  }
+}
+
+@media only screen and (max-width:826px){
+  .mdhidden{
+    display: none;
+  }
 }
