--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,18 +1,25 @@
 .main_div{
 height: 100vh;
 width: 100%;
-background-color:rgb(93,23,235);
+/* background-color: black; */
 display: flex;
 overflow: hidden;
+background-image: url(".././images/rightvideo.gif");
+background-repeat: no-repeat;
+background-size:cover;
 }
+
 .login_div{
 margin-top: 10%;
 flex: 45%;
 }
 .signup_div{
 flex: 50%;
-background-color: white;
-padding: 3rem;
+background-color: rgb(255, 255, 255);
+/* background-image: url(".././images/rightvideo.gif");
+background-repeat: no-repeat;
+background-size:cover;
+padding: 3rem; */
 }
 .assistance_btn{
 position: absolute;
