--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1106,7 +1106,7 @@ nav {
   margin: auto;
   /* padding: 40px; */
   /* margin-right: 30px; */
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   border-radius: 16px;
 }
@@ -1114,7 +1114,7 @@ nav {
 .inner_login {
   width: 80%;
   margin: auto;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.259);
   padding: 2rem 2rem 2rem 2rem;
   border-radius: 2rem;
 }
